removed voting functions

--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -14,10 +14,7 @@
     <div class='card'>
       <div class="item item-body">
         <div class='push-down' ng-hide='settings.notifications'>
-          <div class='bar bar-header bar-calm'>
-            <h4 class='title'>Switch on Timer</h4>
-          </div>
-          <a class='button button-small button-positive button-center' href='#/tab/settings'>Settings</a>
+          <a class='button button-small button-positive button-center' href='#/tab/settings'>Switch on Timer</a>
         </div>
 
         <div class='push-down' style='text-align: center;' ng-show='settings.notifications'>
