--- a/www/templates/tab-contact.html
+++ b/www/templates/tab-contact.html
@@ -1,3 +1,4 @@
+<!-- Contact page -->
 <ion-view view-title="Contact">
   <ion-content>
 
@@ -7,6 +8,7 @@
 
     <div id="map" data-tap-disabled="true"></div>
 
+    <!-- Contact and social media links -->
     <div class="item tabs tabs-secondary tabs-icon-left">
       <a class="tab-item" href="tel:020837404560">
         <i class="icon ion-ios-telephone-outline"></i>
